<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlumnoClick">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizonta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizonta3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizonta4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizonta5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizonta6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizonta7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizonta8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiahorizonta2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertica"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertica3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertica4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertica5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertica7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertica8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertica9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.73" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertica6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiavertica2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textViewNombreBD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta4"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica9"
        app:layout_constraintStart_toStartOf="@+id/guiavertica7"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta3" />

    <TextView
        android:id="@+id/textViewDniBD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dni"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta7"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica9"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/guiavertica7"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta6"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/textViewApellido1BD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apellido1"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta5"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guiavertica7"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta4"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/textViewApellido2BD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apellido2"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta6"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica8"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="@+id/guiavertica7"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta5"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/textViewCursoBD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/curso"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta8"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guiavertica7"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta7"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta4"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica6"
        app:layout_constraintStart_toStartOf="@+id/guiavertica3"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta3" />

    <TextView
        android:id="@+id/textViewCurso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/curso"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta8"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guiavertica3"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta7"
        app:layout_constraintVertical_bias="0.56" />

    <TextView
        android:id="@+id/textViewApellido2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ape2"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta6"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guiavertica3"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta5"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/textViewDni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dni"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta7"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guiavertica3"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta6"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/textViewApellido1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ape1"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta5"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guiavertica3"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta4"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/info"
        app:layout_constraintBottom_toTopOf="@+id/guiahorizonta"
        app:layout_constraintEnd_toStartOf="@+id/guiavertica2"
        app:layout_constraintStart_toStartOf="@+id/guiavertica"
        app:layout_constraintTop_toTopOf="@+id/guiahorizonta2" />
</androidx.constraintlayout.widget.ConstraintLayout>